Contact form no longer falls behind footer

--- a/_sass/components/footer.sass
+++ b/_sass/components/footer.sass
@@ -1,12 +1,11 @@
 footer
-    position: absolute
     background-color: rgb(50, 50, 50)
     width: 100%
-    left: 0
-    bottom: 0
+    height: 200px
     font-size: 1.2em
     display: flex
     justify-content: center
+    flex-shrink: 0
 
     .grid-wrapper
         display: grid
