--- a/_sass/contact.sass
+++ b/_sass/contact.sass
@@ -1,43 +1,52 @@
 #contact
-    .text-wrapper
-        width: 100%
-        display: flex
-        justify-content: center
-        margin: 10px
+    padding-left: 0
+    padding-right: 0
+    padding-bottom: 0
+    display: flex
+    flex-direction: column
 
-        h1
-            width: 50%
-            font-size: 2em
+    .content
+        flex: 1 0 auto
 
-    .form-wrapper
-        display: flex
-        justify-content: center
+        .text-wrapper
+            width: 100%
+            display: flex
+            justify-content: center
+            margin: 10px
 
-        form.contact-form
-            width: 50%
+            h1
+                width: 50%
+                font-size: 2em
 
-            > *
-                background-color: rgb(228, 228, 228)
-                color: rgb(41, 41, 41)
-                border: none
-                border-radius: 2px
-                font-size: 1.2em
-                display: block
-                margin: 10px
-                padding: 10px
-                width: 100%
-                resize: none
+        .form-wrapper
+            display: flex
+            justify-content: center
 
-                &:focus
-                    background-color: rgb(215, 215, 215)
+            form.contact-form
+                width: 50%
 
-            textarea
-                font-family: 'Noto Sans', 'sans', 'Helvetica'
+                > *
+                    background-color: rgb(228, 228, 228)
+                    color: rgb(41, 41, 41)
+                    border: none
+                    border-radius: 2px
+                    font-size: 1.2em
+                    display: block
+                    margin: 10px
+                    padding: 10px
+                    width: 100%
+                    resize: none
 
-            input[type="button"]
-                width: 30%
-                cursor: pointer
-                transition: background-color 100ms ease
+                    &:focus
+                        background-color: rgb(215, 215, 215)
 
-                &:hover
-                    background-color: rgb(209, 209, 209)
+                textarea
+                    font-family: 'Noto Sans', 'sans', 'Helvetica'
+
+                input[type="button"]
+                    width: 30%
+                    cursor: pointer
+                    transition: background-color 100ms ease
+
+                    &:hover
+                        background-color: rgb(209, 209, 209)
